Release CMTK-1.2.2:

- Testing: added tests for "mat2dof" tool.
- Fixed: "mip" tool did not compute projection images with proper pixel sizes
    based on the input volume.
- Testing: added tests for "mip" tool.
- Improved: "mip" tool now sets black and white points automatically if not
    provided by the user.
- Testing: added test for "Rohlfing" single-image intensity-consistent
    filtering in "filter" tool.
- Removed: further removal of obsolete PGM and DICOM I/O code.


Release CMTK-1.2.1 (2010-02-01):

- Added: "statistics" tool now optionally outputs mask-based results for all
    up to a user-provided maximum label, even if not all labels in the range
    actually occur in the mask.
- Added: "convertx" tool now does thresholding above and below threshold, to
    threshold and to padding.
- Added: re-added missing "--fast" switch for warp and warpx tools.
- Added: "imagemath" can now threshold above and below given values.
- Added: "convertx" tool can now rescale image intensities to target range
    using "--scale-to-range" operation.

- Fixed: reading empty (i.e., zero pixels) images crashed the toolkit
- Fixed: "reformatx" did not respect user-defined padding value when computing
    Jacobian maps (Issue #4564).
- Fixed: label mode of "avg_adm" tool was broken.
- Fixed: "avg_adm" now gives consistent results regardless of number of
    CPUs. Also fixed minor bug that would have broken this altogether if there
    were more CPUs than pixels in an image row.
- Fixed: "avg_adm" tests crashed on MPI; bug also affected non-MPI build
    (Issue #4571).
- Fixed: "statistics" now tests whether grid of mask volume matches that of
    statistics volume.

- Testing: run all warp and warpx tests in "fast" mode
- Testing: added tests, inputs, and baselines for "avg_adm" tool.

- Removed: deformation strain tensor computation was untested and unused; thus
    removed.
- Removed: partial read support for AVW file format removed