@@ -1,0 +1,15 @@
+FORMAT	Analyze 7.5 file [Header+Binary File/Big Endian].
+XDIM	0
+YDIM	0
+ZDIM	0
+ORIENT	LAS
+GRID	Uniform
+XPIX	1.000000
+YPIX	1.000000
+ZPIX	1.000000
+XFOV	-1.000000
+YFOV	-1.000000
+ZFOV	-1.000000
+XORIGIN	0.000000
+YORIGIN	0.000000
+ZORIGIN	0.000000
