@@ -1,0 +1,15 @@
+FORMAT	Analyze 7.5 file [Header+Binary File/Little Endian].
+XDIM	96
+YDIM	128
+ZDIM	68
+ORIENT	LAS
+GRID	Uniform
+XPIX	1.875000
+YPIX	1.875000
+ZPIX	1.250000
+XFOV	178.125000
+YFOV	238.125000
+ZFOV	83.750000
+XORIGIN	0.000000
+YORIGIN	0.000000
+ZORIGIN	0.000000
