@@ -1,0 +1,15 @@
+FORMAT	Analyze 7.5 file [Header+Binary File/Little Endian].
+XDIM	100
+YDIM	200
+ZDIM	300
+ORIENT	LAS
+GRID	Uniform
+XPIX	0.300000
+YPIX	0.200000
+ZPIX	0.100000
+XFOV	29.700001
+YFOV	39.799999
+ZFOV	29.900000
+XORIGIN	0.000000
+YORIGIN	0.000000
+ZORIGIN	0.000000
